--- a/public/settings.json
+++ b/public/settings.json
@@ -1,5 +1,5 @@
 {
     "id": "site",
-    "siteModal": true,
+    "siteModal": false,
     "siteModalImage": "https://res.cloudinary.com/dev-empty/image/upload/v1681201069/t8ccasiy27al86xnoywm.png"
 }
